--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -18,6 +18,7 @@
     <h1 class="logo">optyjaciel</h1>
     <div class="container">
         <div class="menu">
+            <div class="gray-belt">menu</div>
             <ul>
                 <li><a href="">aktualna runda</a></li>
                 <li><a href="">Twoi optyjaciele</a></li>
