--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -24,13 +24,13 @@
                 <li><a href="{% url "current-game" %}">aktualna runda</a></li>
                 <li><a href="">Twoi optyjaciele</a></li>
                 <li><a href="{% url "rules" %}">zasady gry</a></li>
-                <li><a href="">zaproponuj pytanie</a></li>
+                <li><a href="{% url "suggest-question" %}">zaproponuj pytanie</a></li>
             </ul>
         </div>
         <div class="content">
             {% block content %}{% endblock %}
         </div>
     </div>
-    <div class="footer">. </div>
+    <div class="footer"></div>
 </body>
 </html>
