--- a/game/static/css/rules.css
+++ b/game/static/css/rules.css
@@ -4,25 +4,14 @@ h1 {
 
 div.rules {
     margin: 24px;
-    font-size: 1.1em;
+}
+
+div.matching_example {
     display: flex;
-    flex-wrap: wrap;
-}
-
-div.diagram {
-    width: 48%;
-}
-
-div.text {
-    width: 48%;
-    border: 1px dashed #d9d9d9;
-    padding: 12px;
+    text-align: justify;
 }
 
 img {
-    width: 75%;
-    text-align: center;
+    width: 45%;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
