--- a/game/templates/rules.html
+++ b/game/templates/rules.html
@@ -6,29 +6,37 @@
 {% endblock %}
 {%  block content %}
     <div class="gray-belt">zasady gry</div>
-    <h1>Jak dobierani są optyjaciele?</h1>
+    <h1>Q&A</h1>
+
     <div class="rules">
-        <div class="diagram"><img src="{% static 'img/diagram.png' %}"></div>
-        <div class="text">
-            <p>
-                Optyjaciele są łączeni w pary tak, aby było jak najwięcej punktów wśród wszystkich grających.
-                Punkt jest przyznawany zawsze wtedy, gdy dwie osoby odpowiedzą tak samo na pytanie.
-            </p>
+        <h2>Na czym polega gra?</h2>
+        <p>W każdej rundzie wszyscy gracze odpowiadają na 10 takich samych pytań.</p>
 
-            <p>
-                Załóżmy, że w grze biorą udział Alicja, Bartek, Czarek i Daria.
-                Ich wyniki można zobaczyć na diagramie.
-            </p>
+        <p>Następnie gracze są dobierani w pary tak, aby było jak najwięcej punktów wśród wszystkich graczy.
+            Punkty są przyznawane za takie same odpowiedzi na pytania.
+            Dobraną parę nazywamy <strong>optyjaciółmi</strong>.</p>
 
-            <p>
-                Optyjacielami zostaliby Alicja i Bartek (wynik 7 punktów) i Czarek z Darią (wynik 6 punktów).
-                W ten sposób wynik całej grupy to 13 punktów.
-            </p>
-            <p>
-                Mimo że najwyższy wynik mają Alicja i Czarek (8 punktów) nie są oni optyjacielami,
-                ponieważ wtedy Bartek zostałby połączony z Darią (4 punkty).
-                Wynik całej grupy wyniósłby tylko 12 punktów.
-            </p>
+        <p>Każda runda trwa jeden tydzień.
+            W trakcie trwania rundy optyjaciele mogą się zmieniać, ponieważ do gry dołączają nowi gracze.
+            Na koniec rundy, gra jest zakańczana a optyjaciele są ustanawianie na stałe.</p>
+
+        <h2>Jak dobierani są optyjaciele?</h2>
+        <div class="matching_example">
+            <div>
+                <p>Optyjaciele są łączeni w pary tak, aby było jak najwięcej punktów wśród wszystkich grających.
+                    Punkt jest przyznawany zawsze wtedy, gdy dwie osoby odpowiedzą tak samo na pytanie.</p>
+
+                <p>Załóżmy, że w grze biorą udział Alicja, Bartek, Czarek i Daria.
+                    Ich wyniki można zobaczyć na diagramie.</p>
+
+                <p>Optyjacielami zostaliby Alicja i Bartek (wynik 7 punktów) i Czarek z Darią (wynik 6 punktów).
+                    W ten sposób wynik całej grupy to 13 punktów.</p>
+
+                <p>Mimo że najwyższy wynik mają Alicja i Czarek (8 punktów) nie są oni optyjacielami,
+                    ponieważ wtedy Bartek zostałby połączony z Darią (4 punkty).
+                    Wynik całej grupy wyniósłby tylko 12 punktów.</p>
+            </div>
+            <img src="{% static 'img/diagram.png' %}" alt="Example of scores between players">
         </div>
     </div>
 {% endblock %}
