--- a/game/templates/current_match.html
+++ b/game/templates/current_match.html
@@ -3,20 +3,18 @@
 
 {% block styles %}
     <link rel="stylesheet" href="{% static 'css/game.css' %}">
-    <link rel="stylesheet" href="{% static 'css/match.css' %}">
+    <link rel="stylesheet" href="{% static 'css/current_match.css' %}">
 {% endblock %}
 
 {%  block content %}
     <div class="gray-belt">runda {{ year }}_{{ week }}</div>
     <div class="current-match">
-        <span class="round-end">Do końca rundy zostało:</span>
-        <br><br>
-        Na tę chwilę Twoim optyjacielem jest:
-        <br><br>
+        <p>Do końca rundy zostało: {{ remaining_time_in_week }}</p>
+        <p>Na tę chwilę Twoim optyjacielem jest:</p>
 
-        <div class="match">
-            <div class="match-name">AlaMakota</div>
-            <div class="score">8 punktów</div>
+        <div class="matched-user">
+            AlaMakota<br>
+            8 punktów
         </div>
     </div>
 
