--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -17,6 +17,7 @@
     </div>
 
     <h1 class="logo">optyjaciel</h1>
+
     <div class="container">
         <div class="menu">
             <div class="gray-belt">menu</div>
@@ -27,10 +28,13 @@
                 <li><a href="{% url "suggest-question" %}">zaproponuj pytanie</a></li>
             </ul>
         </div>
-        <div class="content">
-            {% block content %}{% endblock %}
+
+        <div class="content-container">
+            <div class="gray-belt">{% block content-title %}{% endblock %}</div>
+            <div class="content">{% block content %}{% endblock %}</div>
         </div>
     </div>
+
     <div class="footer"></div>
 </body>
 </html>
