--- a/game/templates/suggest.html
+++ b/game/templates/suggest.html
@@ -1,7 +1,8 @@
 {%  extends "base.html" %}
-{% load static %}
+
+{% block content-title %}zaproponuj pytanie{% endblock %}
+
 {%  block content %}
-    <div class="gray-belt">zaproponuj pytanie</div>
     Zaproponuj pytanie
 
 {% endblock %}
