deal with odd number of participants

--- a/game/templates/home.html
+++ b/game/templates/home.html
@@ -39,7 +39,7 @@
             </div>
         </div>
         {%  endfor %}
-        <input type="hidden" name="quiz_id" value="{{ quiz_id }}">
+        <input type="hidden" name="quiz_id" value="{{ quiz.id }}">
         <button type="submit">Zapisz</button>
     </form>
 
