add matches view

--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -22,7 +22,7 @@
             <div class="gray-belt">menu</div>
             <ul>
                 <li><a href="{% url "game" %}">aktualna runda</a></li>
-                <li><a href="">Twoi optyjaciele</a></li>
+                <li><a href="{% url "matches" %}">Twoi optyjaciele</a></li>
                 <li><a href="{% url "rules" %}">zasady gry</a></li>
                 <li><a href="{% url "suggest" %}">zaproponuj pytanie</a></li>
             </ul>
