make template mobile-friendlier

--- a/game/templates/matches.html
+++ b/game/templates/matches.html
@@ -10,7 +10,7 @@
 {%  block content %}
 
     {% for match in matches %}
-        {% include "match.html" %}
+        {% include "quiz-match.html" %}
     {% endfor %}
 
     <div class="bottom"></div>
