--- a/game/templates/round.html
+++ b/game/templates/round.html
@@ -13,7 +13,7 @@
     Na tę chwilę Twoim optyjacielem jest:
     <br><br>
 
-    {% include "match.html" %}
+    {% include "quiz-match.html" %}
 
     <div class="bottom"></div>
 
