--- a/game/static/css/game.css
+++ b/game/static/css/game.css
@@ -1,3 +1,7 @@
+/*
+    orange: rgba(245, 180, 76, 1)
+*/
+
 * { box-sizing: border-box; }
 a {color: inherit; text-decoration: none; }
 
@@ -5,9 +9,6 @@ body {
     font-family: Ubuntu, sans-serif;
     margin: 0;
     background-color: #eee;
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*height: 100vh; !* viewport height in % - trick for footer*!*/
 }
 
 .top-bar {
@@ -35,13 +36,15 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
 .menu {
-    width: 24%;
     background-color: #fff;
-    border-radius: 2px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    border-top: 2px solid rgba(245, 180,76, 1);
+    flex-basis: 300px;
 }
 
 .menu > ul {
@@ -61,29 +64,29 @@ body {
 }
 
 .menu > ul > li > a:hover {
-    background-color: rgba(245, 180,76, 1);
+    background-color: rgba(245, 180, 76, 1);
     color: #fff;
-}
-
-.content-container {
-    width: 74%;
-    background-color: #fff;
-    border-radius: 2px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-}
-
-.gray-belt {
-    background-color: #343e40;
-    color: #fff;
-    height: 36px;
-    line-height: 36px;
-    padding-left: 24px;
 }
 
 .content {
+    flex-grow: 2;
+    background-color: #fff;
+    border-radius: 2px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0 8px 24px;
+    border-top: 2px solid rgba(245, 180,76, 1);
     padding: 24px;
 }
 
 .footer {
-    margin-top: 24px;
+    margin-top: 12px;
+}
+
+@media only screen and (max-width: 768px) {
+    .menu {
+        flex-basis: 100%;
+        margin-top: 10px;
+    }
+    .logo {
+        display: none;
+    }
 }
