--- a/game/static/css/quiz.css
+++ b/game/static/css/quiz.css
@@ -1,6 +1,5 @@
 div.question-set {
     border: 1px dashed #d9d9d9;
-    margin: 24px;
 }
 
 div.question-container {
@@ -47,11 +46,32 @@ div.options-container {
 }
 
 .lbl > input + div:hover {
-    background-color: rgba(245, 180,76, 0.5);
+    background-color: rgba(245, 180, 76, 0.5);
 }
 
 .lbl > input:checked + div {
-    background-color: rgba(245, 180,76, 0.3);
-    border: 1px solid rgba(245, 180,76, 1);
+    background-color: rgba(245, 180, 76, 0.3);
+    border: 1px solid rgba(245, 180, 76, 1);
+}
+
+.vertical-center {
+    display: flex;
+    justify-content: center;
+}
+
+button {
+    background-color: rgba(245, 180, 76, 0.9);
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    margin-top: 16px;
+    border-radius: 2px;
+    cursor: pointer;
+    width: 33%;
+    font-size: 16px;
+}
+button:hover {
+    background-color: rgba(245, 180, 76, 1);
 }
 
