--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -3,11 +3,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cookie" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/game.css' %}">
-    {% block styles %}{% endblock %}
+    {% block head %}{% endblock %}
     <title>optyjaciel | optymalny przyjaciel</title>
 </head>
 <body>
@@ -19,7 +20,6 @@
 
     <div class="container">
         <div class="menu">
-            <div class="gray-belt">menu</div>
             <ul>
                 <li><a href="{% url "game" %}">aktualna runda</a></li>
                 <li><a href="{% url "matches" %}">Twoi optyjaciele</a></li>
@@ -28,13 +28,8 @@
             </ul>
         </div>
 
-        <div class="content-container">
-            <div class="gray-belt">
-                {% block content-title %}{% endblock %}
-            </div>
-            <div class="content">
-                {% block content %}{% endblock %}
-            </div>
+        <div class="content">
+            {% block content %}{% endblock %}
         </div>
     </div>
 
