--- a/game/templates/quiz.html
+++ b/game/templates/quiz.html
@@ -1,11 +1,10 @@
 {%  extends "base.html" %}
 
 {% load static %}
-{% block styles %}
+{% block head %}
     <link rel="stylesheet" href="{% static 'css/quiz.css' %}">
+    <script src="{% static 'js/app.js' %}" type="text/javascript"></script>
 {% endblock %}
-
-{% block content-title %}runda {{ quiz.year }}_{{ quiz.week }}{% endblock %}
 
 {%  block content %}
     <form method="post">
@@ -40,7 +39,9 @@
         </div>
         {%  endfor %}
         <input type="hidden" name="quiz_id" value="{{ quiz.id }}">
-        <button type="submit">Zapisz</button>
+        <div class="vertical-center">
+            <button type="submit">Wyślij</button>
+        </div>
     </form>
 
 {%  endblock %}
