--- a/game/templates/compatibility.html
+++ b/game/templates/compatibility.html
@@ -1,16 +1,11 @@
 {%  extends "base.html" %}
 
 {% load static %}
-{% block styles %}
+{% block head %}
     <link rel="stylesheet" href="{% static 'css/compatibility.css' %}">
 {% endblock %}
 
-{% block content-title %}
-    kompatybilność | runda {{ quiz.year }}_{{ quiz.week }}
-{% endblock %}
-
 {%  block content %}
-
     <table>
         <tr>
             <th>#</th>
@@ -28,5 +23,4 @@
         </tr>
         {% endfor %}
     </table>
-
 {% endblock %}
