--- a/game/templates/game_quiz.html
+++ b/game/templates/game_quiz.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 {% block head %}
-    <link rel="stylesheet" href="{% static 'css/quiz.css' %}">
+    <link rel="stylesheet" href="{% static 'css/game_quiz.css' %}">
     <script src="{% static 'js/app.js' %}" type="text/javascript"></script>
 {% endblock %}
 
