--- a/game/static/css/join.css
+++ b/game/static/css/join.css
@@ -25,6 +25,7 @@ body {
     background-color: #fff;
     padding: 24px;
     box-shadow: rgba(149, 157, 165, 0.2) 0 8px 24px;
+    border-top: 2px solid rgba(245, 180,76, 1);
 }
 
 h2 {
