--- a/game/templates/rules.html
+++ b/game/templates/rules.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {%  block content %}
-    <h1>Q&A</h1>
+    <h1>Zasady gry</h1>
         <h2>Na czym polega gra?</h2>
         <p>
             W każdej rundzie wszyscy gracze odpowiadają na 10 takich samych pytań.
