--- a/game/static/css/compatibility.css
+++ b/game/static/css/compatibility.css
@@ -12,18 +12,12 @@ th, td {
 table th {
     padding-top: 12px;
     padding-bottom: 12px;
-    /*text-align: left;*/
-    /*background-color: #ddd;*/
-    /*background-color: rgba(245, 180,76, 1);*/
-    /*color: #fff;*/
-    /*background-color: #eee;*/
 }
 
-table tr:hover {
-    background-color: rgba(245, 180,76, 0.1);
-}
+/*table tr:hover {*/
+/*    background-color: rgba(245, 180,76, 0.1);*/
+/*}*/
 
 .good {
-    /*background-color: green;*/
     background-color: rgba(245, 180,76, 0.3)
 }
